--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -8,16 +8,17 @@
 </div>
 
 
-<center><p class="info">The users of this website are completely anonymous.No name or username will appear next to any review
-,but be 100% sure that all the reviews are genuine and none of them is created at random.
-As stated in the main page,this is not a service created or funded by the university,hence is not an official service 
-of the University.It's only built for providing students some essential information about professors.
-The users of this website are completely anonymous.No name or username will appear next to any review
-,but be 100% sure that all the reviews are genuine and none of them is created at random.
-As stated in the main page,this is not a service created or funded by the university,hence is not an official service 
-of the University.It's only built for providing students some essential information about professors.
-The users of this website are completely anonymous.No name or username will appear next to any review
+<center><p class="info">Professor rating websites are not domething new.They are although something people don't tend to use frequently.Some of our university professors are listed in other 
+reviewing websites,but the reviews are either too old,or too few(no practical use van be made aout of them).Our university doesn't provide a complete reviewing platform for 
+our professors,so this website is certainly something that students can find useful.The users of this website are completely anonymous.No name or username will appear next to any review
 ,but be 100% sure that all the reviews are genuine and none of them is created at random.
 As stated in the main page,this is not a service created or funded by the university,hence is not an official service 
 of the University.It's only built for providing students some essential information about professors. </p></center>
+
+<h3>How the university officilas can make use of this website.</h3>
+<center><p class="infopar">As stated before,this is not an official website of the university.Nevertheless,it can certainly be useful for both students, professors and university officials.
+If used right by students,this website can provide useful feedback for each professor's performance.Hence,each professor can take the reviews directed to them as a useful resource
+to progress.
+University officials can use reviews as professor evaluation
+</p></center>
 
