--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -9,23 +9,12 @@
         respectful reviews
     </h3></center>
 
-        <div class="steps-container">
-        <h3>The steps to review your professor</h3>
-        <ul class="steps">
-            <li><a>Create an account</a></li>
-            <li><a>Search for a professor</a></li>
-            <li><a>Write and post an anonymous review</a></li>
 
-        </ul>
-        </div>
 
         <div class="illustrations-wrapper">
-        <%= image_tag "illustration1.svg" ,:style => "width:300px;position:relative;
-        top:0px;left:40px;margin-left:100px;" %>
-        <%= image_tag "illustration3.svg" ,:style => "width:300px;position:relative;
-        top:0px;left:40px;margin-left:100px;" %>
-        <%= image_tag "illustration2.svg" ,:style => "width:300px;position:relative;
-        top:0px;left:40px;margin-left:100px;" %>
+        <%= image_tag "illustration1.svg" ,:class => "img_preview" %>
+        <%= image_tag "illustration3.svg" ,:class => "img_preview" %>
+        <%= image_tag "illustration2.svg" ,:class => "img_preview" %>
 
 
     </div>
