--- a/app/views/professors/new.html.erb
+++ b/app/views/professors/new.html.erb
@@ -27,11 +27,11 @@
 
   <p>
     <%= f.label :department %><br>
-    <%= f.text_area :department %>
+    <%= f.text_field :department %>
   </p>
   <p>
     <%= f.label :position %><br>
-    <%= f.text_area :position %>
+    <%= f.text_field :position %>
   </p>
   
   <p>
