--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -8,8 +8,10 @@
 
   <div class="column">
 
+  <div class="img-center">
   <%= image_tag "def2.png" ,:style => "width:100px;position:relative;
   top:0px;left:40px;" %>
+  </div>
 
 <p class="name">
   <strong>Name:</strong>
@@ -22,7 +24,7 @@
 </p>
 
 <p class="position">
-  <strong>Position:</strong>
+  <strong>Status:</strong>
   <%= @professor.position %>
 </p>
 
