--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,13 +8,18 @@ li{
 
 }
 
+
+
 header{
   margin-bottom: -25px;
 }
 
-body{
+html,body{
   display:flex; 
   flex-direction:column;
+  width: 100%;
+
+  
 }
 
 .navbar{
@@ -24,14 +29,16 @@ body{
   background-color: initial;
 }
 
-table {
+
+  table.center {
+    margin-left:auto; 
+    margin-right:auto;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 65%;
-    margin-left: 17em;
-    margin-right: auto;
+    width: 60%;
     margin-bottom: 20em;
     margin-top: 6em;
+    display: block;
   }
   
   table td, table th {
@@ -137,6 +144,8 @@ table {
     background-image: url("\mainPageImg.jpg");
     height: 200px;
     margin-bottom: 50em;
+    padding-bottom: 2.5rem;
+    width: 100%;
   }
 
   footer{
@@ -356,6 +365,7 @@ footer p{
 
 }
 
+
 .bottom_logs{
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 padding: 5px;
@@ -393,4 +403,90 @@ top:200px;
   text-decoration: none;
   text-decoration-line: none;
   
+}
+
+.img_preview{
+  width:300px;position:relative;
+        top:0px;left:40px;margin-left:100px;
+}
+
+.infopar{
+  text-align: center;
+  margin-bottom:10em;
+  max-width: 60%;
+  font-family: 'MuseoModerno', cursive;
+}
+
+.prefButtons{
+
+  font-family: 'MuseoModerno', cursive;
+  color: black !important;
+  text-decoration: none;
+  padding: 5px;
+  display: inline-block;
+  transition: all 0.4s ease 0s;
+  background-color: inherit;
+  border: none;
+  position: relative;
+  text-align: center;
+}
+
+
+.prefButtons:hover{
+  color: #ffffff !important;
+background: #0066b3;
+border-color: #0066b3 !important;
+transition: all 0.4s ease 0s;
+}
+
+@media only screen and (min-width: 280px) and (max-width: 1000px){
+  .navbar{
+    text-align:center;
+    width: 97%;
+    left: 0%;
+    }
+
+  .mainPageMain{
+    height: 400px;
+    width: 105%;
+  }
+
+  .img_preview {
+    width: 200px;
+    display: inline;
+    margin-left: 20px;
+  }
+
+table.center{
+  width:80%;
+}
+
+.col1{
+  width:134%;
+}
+
+
+footer{
+  width: 100%;
+}
+
+.column{
+  width: 100%;
+  height: 20%;
+
+}
+
+.img-center{
+  position: absolute;
+  left: 30%;
+  visibility: hidden;
+
+
+}
+.createReview{
+  position: absolute;
+  left: 36%;
+}
+
+
 }
