--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -31,6 +31,10 @@
     <th></th>
   </tr>
  
+  <% if (@professors.empty?) %>
+  <p class="no_results">No results found,because the professor or department name you serached wasn't found.You can add this professor manually.</p>
+  <a class="logs" href="/professors/new">Add a professor</a>
+<% else %>
   <% @professors.each do |professor| %>
     <tr>
       <td><%= professor.name %></td>
@@ -42,7 +46,13 @@
       <td><p><%= professor.dislikes.count %> <%= (professor.dislikes.count) == 1 ? 'Dislike' : 'Dislikes'%></p></td>
 
       </tr>
+      <% end %>
   <% end %>
+
+
+
+
+
 </table>
 </main>
 
