--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -233,11 +233,11 @@ height:200px;
 
 .actions{
   font-family: 'Open Sans Condensed', arial, sans;
-	width: 500px;
+	width: 40%;
 	padding: 30px;
 	background: #FFFFFF;
   margin: 50px auto;
-  margin-bottom: 10em;
+  margin-bottom: 15em;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
@@ -303,9 +303,8 @@ height:200px;
   color:white;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   text-align:center;
-float: left;
 position: relative;
-left: 32px;
+left:20%;
 
 
 }
@@ -412,7 +411,7 @@ top:200px;
 
 .infopar{
   text-align: center;
-  margin-bottom:10em;
+  margin-bottom:15em;
   max-width: 60%;
   font-family: 'MuseoModerno', cursive;
 }
@@ -429,6 +428,7 @@ top:200px;
   border: none;
   position: relative;
   text-align: center;
+  left:35%;
 }
 
 
@@ -500,9 +500,34 @@ footer{
 
 }
 .createReview{
-  position: absolute;
-  left: 36%;
+float: left;
+position: relative;
+left: 35%;
 }
 
+.actions{
+  width: 79%;
+}
+
+.reviews{
+  position: relative;
+    bottom: 400px;
+}
+
+.review_body{
+  bottom: 400px;
+  width: 70%;
+}
+
+.prefButtons{
+  margin-top: 2em;
+    text-align: center;
+    margin-left: 50px;
+}
+
+.button_to{
+  display: inline-block;
+  margin-left: -48px;
+}
 
 }
