--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,10 @@
       <% if current_user %>
        <a class="username"> Hi <%= current_user.name %> </a>
        <li> <%= link_to 'Home', main_page_index_path, class: "logs" %> </li>
-       <li><%= link_to 'Log out', logout_path, method: :delete, class: "logs" %></li>
-       <li><%= link_to 'List of Professors', professors_path, class: "logs" %></li>
+       <li><%= link_to 'List of Professors', professors_path, class: "logs" %></li> 
        <li><a class="logs" href="/info">About</a></li>
+       <li><a class="logs" href="/professors/new">Add a professor</a></li>
+       <li><%= link_to 'Log out', logout_path, method: :delete, class: "logs" %></li>
      <% else %>
      <li> <%= link_to 'Home', main_page_index_path, class: "logs" %> </li>
      <li><%= link_to 'List of Professors', professors_path, class: "logs" %></li> 
