--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -15,10 +15,10 @@ our professors,so this website is certainly something that students can find use
 As stated in the main page,this is not a service created or funded by the university,hence is not an official service 
 of the University.It's only built for providing students some essential information about professors. </p></center>
 
-<h3>How the university officilas can make use of this website.</h3>
-<center><p class="infopar">As stated before,this is not an official website of the university.Nevertheless,it can certainly be useful for both students, professors and university officials.
+<h3>How the university officials can make use of this website.</h3>
+<center><p class="infopar">As stated before,this is not an official website of the university.Nevertheless,it can certainly be useful for everyone,from students to professors and university officials.
 If used right by students,this website can provide useful feedback for each professor's performance.Hence,each professor can take the reviews directed to them as a useful resource
-to progress.
+that can lead to progression.
 University officials can use reviews as professor evaluation
 </p></center>
 
