--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -44,10 +44,7 @@
   </p>
  
   <p>
-  <input type="submit" name="commit" value="Create Review" data-disable-with="Create Review" class="createReview" style="
-  float: left;
-  position: relative;
-  left: 40px;">    
+  <input type="submit" name="commit" value="Create Review" data-disable-with="Create Review" class="createReview">    
   </p>
 <% end %>
 
