--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -21,4 +21,9 @@ If used right by students,this website can provide useful feedback for each prof
 that can lead to progression.
 University officials can use reviews as professor evaluation
 </p></center>
+<h3>Disclaimer</h3>
+
+<center><p class="disclaimer">To all software engineering/web-development geeks,I'm not a good web developer,so don't expect a completely smooth website.It
+has its flaws when it comes to responsiveness,but the point is that it works,and it can help everyone.
+</p></center>
 
