--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -410,6 +410,11 @@ top:200px;
 
 .infopar{
   text-align: center;
+  max-width: 60%;
+  font-family: 'MuseoModerno', cursive;
+}
+.disclaimer{
+  text-align: center;
   margin-bottom:15em;
   max-width: 60%;
   font-family: 'MuseoModerno', cursive;
