--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -140,7 +140,7 @@ html,body{
   }
 
   .mainPageMain{
-    background-image: url("\mainPageImg.jpg");
+    background-image: image-url('mainPageImg.jpg');
     height: 200px;
     margin-bottom: 50em;
     padding-bottom: 2.5rem;
