--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -458,6 +458,18 @@ transition: all 0.4s ease 0s;
   margin-top:5em;
 }
 
+.username{
+  position:relative;
+  top:15px;
+  text-decoration: none;
+  font-family: 'MuseoModerno', cursive;
+
+}
+
+  .username:hover{
+    text-decoration: none;
+    color: inherit;
+  }
 
 @media only screen and (min-width: 280px) and (max-width: 1000px){
   .navbar{
