--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -19,6 +19,15 @@
 
     </div>
 
+    <div class="jumbotron">
+    <h3 class="jumbotron-display">Express your opinion ,help everyone!</h3>
+    <p class="lead">Give honest reviews of your professors and help other students adjust easier to university life.</p>
+  <hr class="my-4">
+  <p>Find out more about this project by reading the website's information page.</p>
+  <a class="jumbotron-button" href="/info">Find out more</a>
+    </div>
+
+
 
     
 </main>
