--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -143,7 +143,7 @@ html,body{
   .mainPageMain{
     background-image: image-url('mainPageImg.jpg');
     height: 200px;
-    margin-bottom: 50em;
+    margin-bottom: 80em;
     padding-bottom: 2.5rem;
     width: 100%;
   }
@@ -475,6 +475,41 @@ transition: all 0.4s ease 0s;
     color: inherit;
   }
 
+  .jumbotron {
+    padding: 2rem 1rem;
+    margin-bottom: 15rem;
+    background-color: #e9ecef;
+    border-radius: 0.3rem;
+    height: 25em;
+    margin-top: 18em;
+    position: relative;
+    width:70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.jumbotron-display{
+  font-size: 45px;
+  font-family: 'math';
+  float: left;
+  padding-left: 15px;
+}
+.lead{
+  font-family: 'system-ui';
+  margin-top: 5em;
+  padding-left: 15px;
+
+}
+.jumbotron p{
+  font-family: 'system-ui';
+  padding-left: 15px;
+  
+
+}
+
+.jumbotron-button{
+  padding-left: 15px;
+
+}
 @media only screen and (min-width: 280px) and (max-width: 1000px){
   .navbar{
     text-align:center;
@@ -485,6 +520,8 @@ transition: all 0.4s ease 0s;
   .mainPageMain{
     height: 400px;
     width: 105%;
+    margin-bottom: 110em;
+
   }
 
   .img_preview {
@@ -512,13 +549,7 @@ footer{
 
 }
 
-.img-center{
-  position: absolute;
-  left: 30%;
-  visibility: hidden;
 
-
-}
 .createReview{
 float: left;
 position: relative;
@@ -550,5 +581,8 @@ left: 35%;
   margin-left: -48px;
 }
 
+.jumbotron{
+  height: 55em;
+}
 
 }
