--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -130,6 +130,7 @@ html,body{
     text-align: center;
     max-width: 60%;
     font-family: 'MuseoModerno', cursive;
+    
   }
 
   .welcomeInfo{
@@ -146,6 +147,8 @@ html,body{
     margin-bottom: 80em;
     padding-bottom: 2.5rem;
     width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
   }
 
   footer{
@@ -176,6 +179,7 @@ html,body{
   height: 10em;
 position: relative;
 height:200px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
@@ -337,6 +341,8 @@ height:200px;
 .wrapper2{
   background-image: image-url('mainPageImg.jpg');
   margin-bottom: 2em;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
 
@@ -478,7 +484,7 @@ transition: all 0.4s ease 0s;
   .jumbotron {
     padding: 2rem 1rem;
     margin-bottom: 15rem;
-    background-color: #e9ecef;
+    background-image: image-url('mainPageImg.jpg');
     border-radius: 0.3rem;
     height: 25em;
     margin-top: 18em;
@@ -486,23 +492,27 @@ transition: all 0.4s ease 0s;
     width:70%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 .jumbotron-display{
   font-size: 45px;
   font-family: 'math';
   float: left;
   padding-left: 15px;
+  color: #ddd;
 }
 .lead{
   font-family: 'system-ui';
   margin-top: 5em;
   padding-left: 15px;
+  color: #ddd;
 
 }
 .jumbotron p{
   font-family: 'system-ui';
   padding-left: 15px;
-  
+  color: #fff;
 
 }
 
