Updated home page and info views

--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -19,11 +19,24 @@ of the University.It's only built for providing students some essential informat
 <center><p class="infopar">As stated before,this is not an official website of the university.Nevertheless,it can certainly be useful for everyone,from students to professors and university officials.
 If used right by students,this website can provide useful feedback for each professor's performance.Hence,each professor can take the reviews directed to them as a useful resource
 that can lead to progression.
-University officials can use reviews as professor evaluation
+University officials can use reviews as professor evaluation.It's important that students fully express their opinions about their professors ,so that 
+officials can take notes of advantages and disadvantages of each professor and make our institution better. 
 </p></center>
+
+<h3>Why use this instead of another professor reviewing site?</h3>
+
+<center><p class="disclaimer">Other professor reviewing websites are not widely used by students or they don't
+include a complete list of our university's professors.It's good to have a complete-up to date 
+platform that is exclusively directed for students in our university.The ideal outcome is to make this platform popular enough,so it can attract 
+the attention of university officials so maybe this can become an official service of our university
+</p></center>
+
+
+
 <h3>Disclaimer</h3>
 
 <center><p class="disclaimer">To all software engineering/web-development geeks,I'm not a good web developer,so don't expect a completely smooth website.It
 has its flaws when it comes to responsiveness,but the point is that it works,and it can help everyone.
 </p></center>
+
 
