--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -1,6 +1,4 @@
 
-
-
 <main class="mainPageMain">
     <center><h3 class="welcomeInfo">
         This is a web application where students can share a review for their professors with others.This is not 
@@ -26,6 +24,51 @@
   <p>Find out more about this project by reading the website's information page.</p>
   <a class="jumbotron-button" href="/info">Find out more</a>
     </div>
+
+   
+    <div class="faq">
+    <div class="grid-container">
+
+         <div class="card-body">
+             <h5 class="card-title">Are my reviews anonymous?</h5>
+             <p class="card-text">The target of this service is to provide someone with useful information about 
+             a professor of their interest, without revealing the reviewer's identity,we don't care 
+             about the name of the users, thus, all reviews and ratings are anonymous.</p>
+        </div>
+
+         <div class="card-body">
+             <h5 class="card-title">Do I need to create an account?</h5>
+             <p class="card-text">Browsing different professors and creating reviews for them doesn't require siginng up to
+             the platform.Signing up is required for liking/disliking professors.</p>
+         </div>
+
+         <div class="card-body">
+             <h5 class="card-title">Is this an official university service?</h5>
+             <p class="card-text">This is not an official service of our University.Everything stated by the creator of this website
+             does't represent the university itself.</p>
+         </div>
+
+         <div class="card-body">
+         <h5 class="card-title">Are the professor reviews genuine?</h5>
+         <p class="card-text">There is not any kind of implemented technology that can spot fake reviews, meaning that 
+         such a website relies on its users being honest with their reviews and ratings.</p>
+     </div>
+
+     <div class="card-body">
+     <h5 class="card-title">Why use this instead of another professor site?</h5>
+     <p class="card-text">Find a full answer to this question by visiting the site's information page <a class="logs" href="/info">here</a></p>
+ </div>
+
+ <div class="card-body">
+ <h5 class="card-title">Is this legal?</h5>
+ <p class="card-text">I don't know</p>
+</div>
+
+    </div>
+    </div>
+
+    
+    
 
 
 
