--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno&family=Source+Sans+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&display=swap');
 
 
 li{
@@ -144,7 +145,7 @@ html,body{
   .mainPageMain{
     background-image: image-url('mainPageImg.jpg');
     height: 200px;
-    margin-bottom: 80em;
+    margin-bottom: 115em;
     padding-bottom: 2.5rem;
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -483,7 +484,7 @@ transition: all 0.4s ease 0s;
 
   .jumbotron {
     padding: 2rem 1rem;
-    margin-bottom: 15rem;
+    margin-bottom: 5rem;
     background-image: image-url('mainPageImg.jpg');
     border-radius: 0.3rem;
     height: 25em;
@@ -520,17 +521,53 @@ transition: all 0.4s ease 0s;
   padding-left: 15px;
 
 }
+
+.faq{
+    display: inline;
+    margin: 2em;
+    
+}
+
+.card-title{
+  font-size: 30px;
+  font-family: 'Heebo', sans-serif;
+  color: #1cb39b;
+  
+
+}
+
+
+.card-text{
+  font-size: 15px;
+  font-family: 'Heebo', sans-serif;
+  font-weight: 600;
+
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 45px;
+  padding-right: 10px;
+  width: 80%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media only screen and (min-width: 280px) and (max-width: 1000px){
   .navbar{
     text-align:center;
     width: 97%;
     left: 0%;
     }
+    .grid-container {
+      display: initial;
+    }
 
   .mainPageMain{
     height: 400px;
     width: 105%;
-    margin-bottom: 110em;
+    margin-bottom: 190em;
 
   }
 
