--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 
 <footer>
 <div class="container-fluid">
-<p>Rate your professor 2020 ©</p>
+<p>Rate my professor 2020</p>
 <%= link_to 'Home', main_page_index_path, class: "bottom_logs" %>
 <%= link_to 'List of Professors', professors_path, class: "bottom_logs" %>
 <a class="bottom_logs" href="/info">About</a>
