--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@ html,body{
   flex-direction:column;
   width: 100%;
   font-size: small;
+  background-color: #f8f9fa;
 
   
 }
@@ -107,7 +108,7 @@ html,body{
   .logo{
     position: relative;
     font-size: x-large;
-    font-family: 'MuseoModerno', cursive;
+    font-family: monospace;
     float: left;
     bottom: 5px;
     background: -webkit-linear-gradient(rgb(135, 158, 218), rgb(39, 66, 197));
@@ -525,6 +526,7 @@ transition: all 0.4s ease 0s;
 .faq{
     display: inline;
     margin: 2em;
+
     
 }
 
@@ -552,7 +554,10 @@ transition: all 0.4s ease 0s;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  background-color: white;
+  border-radius: 0.3rem;
 }
+
 
 @media only screen and (min-width: 280px) and (max-width: 1000px){
   .navbar{
