--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,11 +41,15 @@ html,body{
     width: 60%;
     margin-bottom: 20em;
     margin-top: 6em;
+    -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+     border: none;
+    
   }
   
   table td, table th {
     border: 1px solid #ddd;
     padding: 8px;
+    
   }
   
   table tr:nth-child(even){background-color: #f2f2f2;}
@@ -56,7 +60,7 @@ html,body{
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #0066b3;
+    background-color: #a9a9a9;
     color: white;
   }
 
@@ -557,6 +561,8 @@ transition: all 0.4s ease 0s;
   background-color: white;
   border-radius: 0.3rem;
 }
+
+
 
 
 @media only screen and (min-width: 280px) and (max-width: 1000px){
