--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
      <li><a class="signup" href="/users/new">Sign up</a></li> 
         <% end %>
       </ul>
-      <h1 class="logo">RateYourProfessor</h1>
+      <h1 class="logo">RATE.YOUR<br>PROFESSOR</h1>
     </div>
   </nav>
 </header>
