--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -25,7 +25,8 @@
 
   <% if (@professors.empty?) %>
     <p class="no_results">No results found,because the professor or department name you searched wasn't found.You can add this professor manually.</p>
-    <a class="logs" href="/professors/new">Add a professor</a>
+    <a class="add_prof_index" href="/professors/new">Add a professor</a>
+
   <% else %>
     <table class="center">
     <tr>
