--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -390,6 +390,15 @@ a.add_prof_index {
   font-family: 'MuseoModerno', cursive;
 
 }
+a.add_prof_index2 {
+  display: block;
+  margin: auto;
+  text-align: center;
+  text-decoration: none;
+  color: #777;
+  font-family: 'MuseoModerno', cursive;
+
+}
 a.add_prof_index:hover{
   color:black;
   transition: 1s;
