--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,8 +9,6 @@ li{
 
 }
 
-
-
 header{
   margin-bottom: -25px;
 }
@@ -32,37 +30,35 @@ html,body{
   background-color: initial;
 }
 
-
-  table.center {
-    margin-left:auto; 
-    margin-right:auto;
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 60%;
-    margin-bottom: 20em;
-    margin-top: 6em;
-    -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
-     border: none;
+table.center {
+  margin-left:auto; 
+  margin-right:auto;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+  margin-bottom: 20em;
+  margin-top: 6em;
+  -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
+  border: none;    
+  }
+  
+table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
     
-  }
+}
   
-  table td, table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    
-  }
+table tr:nth-child(even){background-color: #f2f2f2;}
   
-  table tr:nth-child(even){background-color: #f2f2f2;}
+table tr:hover {background-color: #ddd;}
   
-  table tr:hover {background-color: #ddd;}
-  
-  table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #a9a9a9;
-    color: white;
-  }
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #a9a9a9;
+  color: white;
+}
 
   .indexHeader{
       text-align: center;
@@ -119,6 +115,7 @@ html,body{
     -webkit-text-fill-color: transparent;
     background-color:black;
     opacity:0.8;
+    margin-left: 1em;
   }
 
 
@@ -191,7 +188,7 @@ html,body{
 position: relative;
 height:200px;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+margin-top: -20px;
 }
 
 .searchInfo{
