--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
 
 <footer>
 <div class="container-fluid">
-<p class="footer-logo">RATE YOUR <br>PROFESSOR</p>
+<p class="footer-logo"><a class="footer-a" href="/main_page/index">RATE YOUR <br>PROFESSOR</a></p>
 <%= link_to 'Home', main_page_index_path, class: "bottom_logs" %>
 <%= link_to 'List of Professors', professors_path, class: "bottom_logs" %>
 <a class="bottom_logs" href="/info">About</a>
