--- a/app/views/main_page/index.html.erb
+++ b/app/views/main_page/index.html.erb
@@ -1,6 +1,7 @@
 
 <main class="mainPageMain">
     <center><h3 class="welcomeInfo">
+        Find out about the experimental nature of this website here <a class="logs" href="/info">here</a>.<br>
         This is a web application where students can share a review for their professors with others.This is not 
         an official service of the university.It's built for students by students, and primarily aims to improve
         the experience of students,and at the same time provide some food for thought for our professors as well through 
