--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=MuseoModerno&family=Source+Sans+Pro:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 li{
   font-family: 'MuseoModerno', cursive;
 
@@ -34,7 +35,6 @@ html,body{
 table.center {
   margin-left:auto; 
   margin-right:auto;
-  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 60%;
   margin-bottom: 20em;
@@ -48,6 +48,12 @@ table td, table th {
   padding: 8px;
     
 }
+
+table td{
+  font-family: 'Lato', sans-serif;
+  color: gray;
+  text-decoration: none;
+}
   
 table tr:nth-child(even){background-color: #f2f2f2;}
   
@@ -57,8 +63,10 @@ table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #a9a9a9;
-  color: white;
+  background-color: #6c7ae0;
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+  color: #fff;
 }
 
   .indexHeader{
@@ -150,8 +158,7 @@ table th {
   }
 
   .mainPageMain{
-    background-image: image-url('mainPageImg.jpg');
-    height: 200px;
+    background-color: #6c7ae0;    height: 200px;
     margin-bottom: 115em;
     padding-bottom: 2.5rem;
     width: 100%;
@@ -183,8 +190,8 @@ table th {
 }
 
 .col1{
-  background-image: image-url('mainPageImg.jpg');
-  height: 10em;
+  background-color: #6c7ae0;
+    height: 10em;
 position: relative;
 height:200px;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -256,8 +263,8 @@ margin-top: -20px;
 }
 
 .actions h2{
-  background-image: image-url('mainPageImg.jpg');
-	font-family: 'Open Sans Condensed', sans-serif;
+  background-color: #6c7ae0;
+  font-family: 'Open Sans Condensed', sans-serif;
   color: floralwhite;
 	font-size: 18px;
 	font-weight: 100;
@@ -347,11 +354,9 @@ margin-top: -20px;
 }
 
 .wrapper2{
-  background-image: image-url('mainPageImg.jpg');
+  background-color: #6c7ae0;
   margin-bottom: 2em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-
 }
 
 .banner{
@@ -425,6 +430,8 @@ a.add_prof_index:hover{
 .illustrations-wrapper{
 position: relative;
 top:200px;
+display: flex;
+    justify-content: center;
 
 }
 
@@ -451,10 +458,8 @@ top:200px;
 
 .img_preview{
   width:300px;
-  top:0px;
-  position: relative;
-  left:17%;
-  right:0;
+  display: flex;
+    justify-content: center;
 }
 
 .infopar{
@@ -523,8 +528,8 @@ transition: all 0.4s ease 0s;
   .jumbotron {
     padding: 2rem 1rem;
     margin-bottom: 5rem;
-    background-image: image-url('mainPageImg.jpg');
-    border-radius: 0.3rem;
+    background-color: #6c7ae0;
+        border-radius: 0.3rem;
     height: 25em;
     margin-top: 18em;
     position: relative;
@@ -618,7 +623,7 @@ transition: all 0.4s ease 0s;
   .img_preview {
     width:200px;
     display: inline;
-    margin-left: 20px;
+    margin-left: 100px;
   }
 
 table.center{
@@ -631,7 +636,7 @@ table.center{
 
 
 footer{
-  width: 100%;
+  width: 110%;
 }
 
 .column{
@@ -653,11 +658,11 @@ left: 35%;
 
 .reviews{
   position: relative;
-    bottom: 400px;
+  bottom: 380px;
 }
 
 .review_body{
-  bottom: 400px;
+  bottom: 380px;
   width: 70%;
 }
 
@@ -685,5 +690,13 @@ left: 35%;
   position: relative;
   top:20px;
 }
+.logo{
+  margin-left: 0px;
+}
+.illustrations-wrapper{
+  position: relative;
+  top:200px;
+  display: block;
+  }
 
 }
