--- a/app/views/degrees/index.html.erb
+++ b/app/views/degrees/index.html.erb
@@ -1,11 +1,55 @@
-<h1>Degrees</h1>
 
-<ul>
-  <% @degree.each do |degree| %>
-    <li>
-      <%= link_to degree.title, degree %>
-    </li>
+
+
+
+<div class="site-container">
+
+
+
+<main>
+
+<div class="col1">
+<h1 class="indexHeader">List of Degrees</h1>
+
+
+
+ <div class="searchBar">
+ <form action="/degrees" accept-charset="UTF-8" method="get">
+ <input type="text" name="search" id="search" placeholder="Search by code/title">
+  <input type="submit" name="commit" id="btn" value="Search" data-disable-with="Search">
+</form>
+  </div>
+  <p class="searchInfo">Search a degree by code or title and click show to be redirected to the selected degree's reviews<br>
+  Likes and Dislikes indicate how likeable is a degree among students</p>
+  </div>
+
+
+
+  <% if (@degrees.empty?) %>
+    <p class="no_results">No results found,because the code or degree title you searched wasn't found.You can add this professor manually.</p>
+    <a class="add_prof_index" href="/degrees/new">Add a degree</a>
+
+  <% else %>
+    <table class="center">
+    <tr>
+      <th>Code</th>
+      <th>Title</th>
+    </tr>
+   <% @degrees.each do |degree| %>
+    <tr>
+      <td><a><%= link_to degree.code, degree_path(degree) %></a></td>
+      <td><%= degree.title %></td>
+      </tr>
+      <% end %>
   <% end %>
-</ul>
 
-<%= link_to "New Degree", new_degree_path %>
+
+
+
+
+</table>
+</main>
+
+
+</div>
+
