--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -13,40 +13,40 @@
 
 
 
- <div class="searchBar">
- <form action="/professors" accept-charset="UTF-8" method="get">
- <input type="text" name="search" id="search" placeholder="Search by name/department">
-  <input type="submit" name="commit" id="btn" value="Search" data-disable-with="Search">
+<div class="searchBar">
+<form action="/professors" accept-charset="UTF-8" method="get">
+<input type="text" name="search" id="search" placeholder="Search by name/department">
+<input type="submit" name="commit" id="btn" value="Search" data-disable-with="Search">
 </form>
-  </div>
-  <p class="searchInfo">Search a professor by name or department and click show to be redirected to the selected professor's reviews<br>
-  Likes and Dislikes indicate how preferable is a professor among students</p>
-  </div>
+</div>
+<p class="searchInfo">Search a professor by name or department and click show to be redirected to the selected professor's reviews<br>
+Likes and Dislikes indicate how preferable is a professor among students</p>
+</div>
 
 
 
-  <% if (@professors.empty?) %>
-    <p class="no_results">No results found,because the professor or department name you searched wasn't found.You can add this professor manually.</p>
-    <a class="add_prof_index" href="/professors/new">Add a professor</a>
+<% if (@professors.empty?) %>
+<p class="no_results">No results found,because the professor or department name you searched wasn't found.You can add this professor manually.</p>
+<a class="add_prof_index" href="/professors/new">Add a professor</a>
 
-  <% else %>
-    <table class="center">
-    <tr>
-      <th>Name</th>
-      <th>Department</th>
-      <th>Likes/Dislikes ratio</th>
-    </tr>
-   <% @professors.each do |professor| %>
-    <tr>
-      <td><a><%= link_to professor.name, professor_path(professor) %></a></td>
-      <td><%= professor.department %></td>
+<% else %>
+<table class="center">
+<tr>
+  <th>Name</th>
+  <th>Department</th>
+  <th>Likes\Dislikes ratio</th>
+</tr>
+<% @professors.each do |professor| %>
+<tr>
+  <td><a><%= link_to professor.name, professor_path(professor) %></a></td>
+  <td><%= professor.department %></td>
 
-      
-      <td><p><%= professor.likes.count %> <%= (professor.likes.count) == 1 ? 'Like' : 'Likes'%> \ <%= professor.dislikes.count %> <%= (professor.dislikes.count) == 1 ? 'Dislike' : 'Dislikes'%> </p></td>
+  
+  <td><p><%= professor.likes.count %> <%= (professor.likes.count) == 1 ? 'Like' : 'Likes'%> \ <%= professor.dislikes.count %> <%= (professor.dislikes.count) == 1 ? 'Dislike' : 'Dislikes'%> </p></td>
 
-      </tr>
-      <% end %>
+  </tr>
   <% end %>
+<% end %>
 
 
 
