--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -184,6 +184,10 @@ table th {
     left: 2px;
   }
 
+  #error_explanation{
+    text-align: center;
+  }
+
   html {
     position: relative;
     min-height: 100%;
