--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <link rel="icon" href="https://ddo0fzhfvians.cloudfront.net/uploads/icons/png/18681750701610058223-512.png">
+
   </head>
 
   <body>
