--- a/app/views/add_records/index.html.erb
+++ b/app/views/add_records/index.html.erb
@@ -7,7 +7,7 @@
   
   </div>
 
-      <div class="grid-container">
+      <div class="grid-container-2">
         
     <div class="grid-item">
         <div class="items">
