--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -542,9 +542,9 @@ transition: all 0.4s ease 0s;
 
   .jumbotron {
     padding: 2rem 1rem;
-    margin-bottom: 5rem;
+    margin-bottom: 5em;
     background-color: #6c7ae0;
-        border-radius: 0.3rem;
+    border-radius: 0.3rem;
     height: 25em;
     margin-top: 18em;
     position: relative;
@@ -585,6 +585,7 @@ transition: all 0.4s ease 0s;
 .faq{
     display: inline;
     margin: 2em;
+    text-align:left;
 
     
 }
@@ -609,7 +610,8 @@ transition: all 0.4s ease 0s;
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
-  padding: 10px;
+  padding-left:100px;
+  padding-right: 100px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 50px;
@@ -621,11 +623,6 @@ transition: all 0.4s ease 0s;
   margin-left: auto;
   margin-right: auto;
 }
-
-
-
-
-
 
 
 $pri: #128CFC;
@@ -701,6 +698,9 @@ $dark-pri: #6c7ae0;
 .grid-container-2{
   display: grid;
   grid-template-columns: auto auto auto;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
