--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -714,6 +714,9 @@ $dark-pri: #6c7ae0;
     .grid-container {
       display: initial;
     }
+    .grid-container-2{
+      display: initial;
+    }
 
   .mainPageMain{
     height: 400px;
