--- a/app/views/add_records/index.html.erb
+++ b/app/views/add_records/index.html.erb
@@ -48,7 +48,7 @@
           
           <div class="items-body">
             <div class="items-body-content">
-              <span><a class="add_recs_log" href="/professors/new">Add a professor</a>
+              <span><a class="add_recs_log" href="/degrees/new">Add a degree</a>
               </span>
               <i class="fa fa-angle-right"></i>
             </div>
@@ -76,7 +76,7 @@
           
           <div class="items-body">
             <div class="items-body-content">
-              <span><a class="add_recs_log" href="/professors/new">Add a professor</a>
+              <span><a class="add_recs_log" href="/unimodules/new">Add a module</a>
               </span>
               <i class="fa fa-angle-right"></i>
             </div>
