--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -282,8 +282,8 @@ margin-top: -20px;
   float: left;
   width: 14%;
   padding: 10px;
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(84,89,208,1) 0%, rgba(0,212,255,1) 100%);
   height: 100vh;
+  background-image: linear-gradient(to bottom right, rgb(99, 167, 220),#0066b3);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 30em;
 
@@ -329,8 +329,12 @@ margin-top: -20px;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   text-align:center;
   position: relative;
-  left:20%;
+  text-align: center;
 
+}
+
+form{
+  text-align:center;
 
 }
 
@@ -340,7 +344,10 @@ margin-top: -20px;
     left: 2%;
     width: 40%;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom:20px;
 
 }
 
@@ -349,6 +356,8 @@ margin-top: -20px;
   position: relative;
   width: 40%;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
 
 
 }
@@ -707,7 +716,6 @@ $dark-pri: #6c7ae0;
 @media only screen and (min-width: 280px) and (max-width: 1000px){
   .navbar{
     text-align:center;
-    width: 97%;
     left: 0%;
     }
     .grid-container {
@@ -744,7 +752,7 @@ footer{
 }
 
 .column{
-  width: 100%;
+  width: 110%;
   height: 20%;
 
 }
@@ -795,7 +803,6 @@ left: 35%;
   top:20px;
 }
 .logo{
-  margin-left: 0px;
 }
 .illustrations-wrapper{
   position: relative;
